@@ -3,6 +3,7 @@
 = History
 
 == 10.2.6
+* Fixed wss connection from Web Browser handshake failed problem. #431
 * Changed trial broker on `mqtt.redboltz.net` ws and wss port. #430
   * ws was 10080 but Chrome block it by default. Updated to 80.
   * wss was 10443 but Chrome doesn't block it by default. But for consistency, updated to 443.
